--- a/Hubungi Saya.html
+++ b/Hubungi Saya.html
@@ -4,7 +4,7 @@
 		<title> Hubungi Saya </title>
 	<center>
 	<font face=arialblack size=4 color=black>
-		<p><a href="index.html">Beranda</a> - <b> Hubungi Saya</b></p>
+		<p><a href="https://mabhisekaariibahadi.github.io/imk_tgs9_195150401111028-M.-Abhiseka-Ariibahadi/">Beranda</a> - <b> Hubungi Saya</b></p>
 	</center>
 	</head>
 	<body>
